test_out.txt
cargo : warning: unused import: `AtomicU64`
At line:1 char:114
+ ...  Studio COde\Project\unified-trading-engine"; cargo test 2>&1 | Out-F ...
+                                                   ~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: unused import: `AtomicU64`:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
 --> crates\core\src\system_state.rs:1:37
  |
1 | use std::sync::atomic::{AtomicBool, AtomicU64, Ordering};
  |                                     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `parking_lot::RwLock`
 --> crates\core\src\system_state.rs:4:5
  |
4 | use parking_lot::RwLock;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `File`
 --> crates\core\src\journal.rs:1:15
  |
1 | use std::fs::{File, OpenOptions};
  |               ^^^^

warning: unused import: `std::thread`
 --> crates\core\src\config_watcher.rs:3:5
  |
3 | use std::thread;
  |     ^^^^^^^^^^^

warning: unused import: `std::time::Duration`
 --> crates\core\src\config_watcher.rs:4:5
  |
4 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `error`
 --> crates\core\src\config_watcher.rs:8:27
  |
8 | use tracing::{info, warn, error};
  |                           ^^^^^

warning: unused import: `futures_util::SinkExt`
  --> crates\core\src\ws.rs:10:5
   |
10 | use futures_util::SinkExt;
   |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `now`
  --> crates\core\src\heartbeat.rs:16:13
   |
16 |         let now = Instant::now()
   |             ^^^ help: if this is intentional, prefix it with an underscore: `_now`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `unified-trading-core` (lib) generated 8 warnings (run `cargo fix --lib -p unified-trading-core` to apply 7 
suggestions)
warning: field `symbol` is never read
  --> crates\market-data\src\normalizer.rs:47:5
   |
46 | pub struct Normalizer {
   |            ---------- field in this struct
47 |     symbol: String,
   |     ^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `alerts` is never read
   --> crates\market-data\src\normalizer.rs:105:5
    |
100 | pub struct FeedMonitor {
    |            ----------- field in this struct
...
105 |     alerts: Vec<FeedAlert>,
    |     ^^^^^^

warning: unused import: `bounded`
 --> crates\risk\src\risk_coordinator.rs:1:25
  |
1 | use crossbeam_channel::{bounded, Receiver, Sender};
  |                         ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::portfolio_manager::PortfolioManager`
  --> crates\risk\src\risk_coordinator.rs:11:5
   |
11 | use crate::portfolio_manager::PortfolioManager;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `SystemTime` and `UNIX_EPOCH`
 --> crates\risk\src\portfolio_manager.rs:3:17
  |
3 | use std::time::{SystemTime, UNIX_EPOCH};
  |                 ^^^^^^^^^^  ^^^^^^^^^^

warning: `market-data` (lib) generated 2 warnings
warning: `risk` (lib) generated 3 warnings (run `cargo fix --lib -p risk` to apply 3 suggestions)
   Compiling execution v0.1.0 (C:\Users\Magnesium\Documents\Trading\Event driven System\Visual Studio 
COde\Project\unified-trading-engine\crates\execution)
warning: unused variable: `wm`
  --> crates\feature\src\computers.rs:13:20
   |
13 |     pub fn compute(wm: &WindowManager, tick: &NormalizedTick) -> (f32, f32, f32) {
   |                    ^^ help: if this is intentional, prefix it with an underscore: `_wm`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `std_dev`
  --> crates\feature\src\computers.rs:59:50
   |
59 |     pub fn compute(wm: &WindowManager, atr: f32, std_dev: f32, macd_histogram: f32) -> (RegimeLabel, f32) {
   |                                                  ^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_std_dev`

warning: unused variable: `strength`
   --> crates\feature\src\computers.rs:269:22
    |
269 |         let (regime, strength) = RegimeComputer::compute(&wm, 0.001, 0.001, 0.01);
    |                      ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_strength`

warning: `feature` (lib) generated 2 warnings (run `cargo fix --lib -p feature` to apply 2 suggestions)
warning: `feature` (lib test) generated 3 warnings (2 duplicates) (run `cargo fix --lib -p feature --tests` to apply 1 
suggestion)
warning: `market-data` (lib test) generated 2 warnings (2 duplicates)
warning: unused variable: `mid_price`
  --> crates\model\src\inference.rs:22:13
   |
22 |         let mid_price = features.get("mid_price").unwrap_or(0.0) as f32;
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_mid_price`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::portfolio_manager::PortfolioManager`
  --> crates\risk\src\risk_coordinator.rs:11:5
   |
11 | use crate::portfolio_manager::PortfolioManager;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `model` (lib) generated 1 warning (run `cargo fix --lib -p model` to apply 1 suggestion)
warning: `model` (lib test) generated 1 warning (1 duplicate)
warning: `risk` (lib test) generated 2 warnings (1 duplicate) (run `cargo fix --lib -p risk --tests` to apply 1 
suggestion)
warning: `unified-trading-core` (lib test) generated 7 warnings (7 duplicates)
warning: unused import: `feature::FeatureVector`
 --> crates\strategy\src\strategy_engine.rs:5:5
  |
5 | use feature::FeatureVector;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: method `check_cooldown` is never used
   --> crates\strategy\src\strategy_engine.rs:253:8
    |
112 | impl StrategyEngine {
    | ------------------- method in this implementation
...
253 |     fn check_cooldown(&self, intent: &TradeIntent) -> bool {
    |        ^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `strategy` (lib) generated 2 warnings (run `cargo fix --lib -p strategy` to apply 1 suggestion)
warning: `strategy` (lib test) generated 2 warnings (2 duplicates)
warning: unused import: `JournalEntry`
 --> crates\engine\src\engine.rs:9:52
  |
9 | use unified_trading_core::journal::{JournalWriter, JournalEntry};
  |                                                    ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `unified-trading-engine` (lib) generated 1 warning (run `cargo fix --lib -p unified-trading-engine` to apply 
1 suggestion)
warning: `unified-trading-engine` (lib test) generated 1 warning (1 duplicate)
error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:152:32
    |
152 |         let (dec_tx, dec_rx) = bounded::<RiskDecision>(100);
    |                                ^^^^^^^ not found in this scope

error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:153:36
    |
153 |         let (order_tx, order_rx) = bounded::<String>(100);
    |                                    ^^^^^^^ not found in this scope

error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:177:32
    |
177 |         let (dec_tx, dec_rx) = bounded::<RiskDecision>(100);
    |                                ^^^^^^^ not found in this scope

error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:178:36
    |
178 |         let (order_tx, order_rx) = bounded::<String>(100);
    |                                    ^^^^^^^ not found in this scope

error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:202:32
    |
202 |         let (dec_tx, dec_rx) = bounded::<RiskDecision>(100);
    |                                ^^^^^^^ not found in this scope

error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:203:36
    |
203 |         let (order_tx, order_rx) = bounded::<String>(100);
    |                                    ^^^^^^^ not found in this scope

error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:226:32
    |
226 |         let (dec_tx, dec_rx) = bounded::<RiskDecision>(100);
    |                                ^^^^^^^ not found in this scope

error[E0425]: cannot find function `bounded` in this scope
   --> crates\execution\src\execution_manager.rs:227:37
    |
227 |         let (order_tx, _order_rx) = bounded::<String>(100);
    |                                     ^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `execution` (lib test) due to 8 previous errors
